phpmyadmin/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phpmyadmin
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: docker.io/bitnami/phpmyadmin:5.2.1-debian-11-r15
        name: phpmyadmin
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
