phpmyadmin/phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app: phpmyadmin
  type: ClusterIP
status:
  loadBalancer: {}
